Fix footer spacing

--- a/styles.css
+++ b/styles.css
@@ -89,8 +89,8 @@ margin: 24px 24px;
 	height: 26px;
 	width: 32px;
 	position: absolute;
-	top: 32px;
-	right: 32px;
+	top: 42px;
+	right: 42px;
 	z-index: 2;
 	display: flex;
 	flex-direction: column;
@@ -109,8 +109,8 @@ margin: 24px 24px;
 	display: block;
 	height: 40px;
 	width: 40px;
-	top: 24px;
-	right: 26px;
+	top: 33px;
+	right: 34px;
 	z-index: 5;
 	opacity: 0;
 	cursor: pointer;
@@ -382,7 +382,7 @@ background-position: top;
     display: flex;
     justify-content: center;
     width: 100%;
-	gap: 8px;
+	gap: 20px;
 	font-size: 0.75em;
 }
 
